[package]
name = "projection"
version = "0.1.0"
edition = "2024"
description = "Projection mapping example demonstrating rustjay-projection"

[features]
default = ["projection", "webcam"]
projection = ["rustjay-engine/projection"]
webcam  = ["rustjay-engine/webcam"]
ndi     = ["rustjay-engine/ndi"]

[dependencies]
rustjay-engine = { workspace = true }
rustjay-projection = { workspace = true }
rustjay-core   = { workspace = true }
rustjay-render = { workspace = true }
wgpu           = { workspace = true }
winit          = { workspace = true }
bytemuck       = { workspace = true }
anyhow         = { workspace = true }
image          = { workspace = true }
log            = { workspace = true }
env_logger     = "0.11"
pollster       = { workspace = true }
