[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/space928/QPlayer"
rust-version = "1.85"

[workspace.dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"
rust_decimal = { version = "1.36", features = ["serde"] }

# Audio / Video
cpal = "0.15"
rubato = "0.16"
symphonia = { version = "0.5", features = ["all"] }
ffmpeg-next = "8.1"

# GPU / UI
wgpu = "29.0"
winit = "0.30"
egui = "0.34"
egui-wgpu = "0.34"
egui-winit = "0.34"
eframe = "0.34"
pollster = "0.3"

# Networking / Protocols
rosc = "0.10"
tokio = { version = "1.42", features = ["rt-multi-thread", "sync", "net", "time", "fs"] }

# MIDI
midir = "0.10"

# Threading / Sync
crossbeam = "0.8"

# Utils
bitflags = "2.9"
chrono = { version = "0.4", features = ["serde", "std", "clock"] }
dirs = "6.0"
rfd = "0.15"
brotli = "7.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Internal crates (path deps managed by cargo workspace)
qplayer-core = { path = "crates/qplayer-core" }
qplayer-audio = { path = "crates/qplayer-audio" }
qplayer-gui = { path = "crates/qplayer-gui" }
qplayer-video = { path = "crates/qplayer-video" }
qplayer-protocols = { path = "crates/qplayer-protocols" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
