[package]
name = "sputnik"
version = "0.1.0"
edition = "2021"
description = "Vertex-shader mesh displacement — proves engine handles indexed mesh geometry"

[dependencies]
rustjay-engine = { workspace = true }
bytemuck       = { workspace = true }
serde          = { workspace = true }
anyhow         = { workspace = true }
log            = { workspace = true }
imgui          = { workspace = true }
glam           = { workspace = true }
env_logger     = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[features]
default = ["ndi", "webcam"]
ndi     = ["rustjay-engine/ndi"]
webcam  = ["rustjay-engine/webcam"]
