[package]
name = "varda"
version = "0.1.0"
edition = "2021"

[dependencies]
rustjay-engine = { workspace = true, features = ["mixer", "api"] }
rustjay-mixer  = { workspace = true }
rustjay-isf    = { workspace = true }
rustjay-core   = { workspace = true }
rustjay-render = { workspace = true }
wgpu           = { workspace = true }
bytemuck       = { workspace = true }
anyhow         = { workspace = true }
serde          = { workspace = true }
log            = { workspace = true }
env_logger     = "0.11"
